# Go-JNI-Android

./: README.md
GoJNIAndroid/: settings.gradle
GoJNIAndroid/app/: build.gradle
GoJNIAndroid/app/src/main/: AndroidManifest.xml
GoJNIAndroid/app/src/main/java/com/aghajari/: MainActivity.java  Native.java
GoJNIAndroid/app/src/main/jni/: CMakeLists.txt  c_android.c
GoJNIAndroid/app/src/main/jni/go/: JNI.c  makefile  test.go
GoJNIAndroid/app/src/main/res/values/: strings.xml  themes.xml
GoJNIAndroid/app/src/main/res/values-night/: themes.xml
GoJNIAndroid/gradle/wrapper/: gradle-wrapper.properties
